tests/paczka1/small_fuzzy/54797758.err
Error in line 3: okp A944 81,0
Error in line 7: JGn4D6u S357 1,6
Error in line 8: okp S357 62,9
Error in line 10: A944 A944 47,7
